--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -8106,7 +8106,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-09T17:59:21Z</date>
+						<date>2019-05-09T20:55:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8165,31 +8165,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5SEHlmzIRPnE
-								h1Zlyu2W+A==
+								TPGeujKpTzHL
+								QR5lGhvUSw==
 								</data>
 								<key>Size</key>
-								<integer>35205</integer>
+								<integer>35739</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZP2FJ/yve/bb
-								UMUDEFQ7OA==
+								v9Af7SEGojgo
+								zGOufpUslA==
 								</data>
 								<key>Size</key>
-								<integer>68310</integer>
-							</dict>
-							<key>files/stacks-image-0c90353-700x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								eYg9kPLcsi2d
-								u36RV5UmQw==
-								</data>
-								<key>Size</key>
-								<integer>72363</integer>
+								<integer>69192</integer>
 							</dict>
 							<key>files/stacks-image-127916a.png</key>
 							<dict>
@@ -8301,16 +8291,6 @@
 								<key>Size</key>
 								<integer>722662</integer>
 							</dict>
-							<key>files/stacks-image-5aa6b15-700x375.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								PTCRWcc73s1n
-								jGVMNVtqzg==
-								</data>
-								<key>Size</key>
-								<integer>339587</integer>
-							</dict>
 							<key>files/stacks-image-6467c3a-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -8320,16 +8300,6 @@
 								</data>
 								<key>Size</key>
 								<integer>29317</integer>
-							</dict>
-							<key>files/stacks-image-681c98a-700x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								WFzuxAeQXtJT
-								2StC5DbNvw==
-								</data>
-								<key>Size</key>
-								<integer>84706</integer>
 							</dict>
 							<key>files/stacks-image-68a4e7f-350x375.png</key>
 							<dict>
@@ -8365,11 +8335,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AQQpX6Vwp+W4
-								iqILFHYS5g==
+								J0oCqNLQIZun
+								8nxN/0xT1A==
 								</data>
 								<key>Size</key>
-								<integer>27501</integer>
+								<integer>28375</integer>
 							</dict>
 							<key>files/stacks-image-7700296-350x375.png</key>
 							<dict>
@@ -8645,31 +8615,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SIdtykek4G2f
-								eeSzycG1TA==
+								PXZsRywLs3Bo
+								FRLl5AYAKA==
 								</data>
 								<key>Size</key>
-								<integer>559285</integer>
+								<integer>545677</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								62eeUFDjYYQl
-								w45os8bLiQ==
+								rJhVHTVc0WqG
+								Im+A/HZ4sw==
 								</data>
 								<key>Size</key>
-								<integer>76803</integer>
+								<integer>76075</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZLhG5mo46IMm
-								4028bfsRJw==
+								WRLgFYD9UW0z
+								Y0a/O4/aeA==
 								</data>
 								<key>Size</key>
-								<integer>935100</integer>
+								<integer>926486</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14822,7 +14792,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-09T17:59:21Z</date>
+						<date>2019-05-09T20:55:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15861,8 +15831,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ugO4P/TQJV89
-								kL6iWxDc8g==
+								TeqU1ovUAaoN
+								8VTSSDgMVg==
 								</data>
 								<key>Size</key>
 								<integer>3785</integer>
@@ -16009,7 +15979,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFCUP46VyGADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFCZaNA87qADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16019,14 +15989,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUJQ/jpY
-				WIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUJlo0D0
+				v4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBQlD+Olib
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBQmWjQPT5
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16036,7 +16006,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBQlD+OljWgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBQmWjQPUbgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16046,7 +16016,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBQlD+Olj/gAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBQmWjQPU8gAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
