--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-09T17:59:21Z</date>
+						<date>2019-05-09T20:55:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,31 +94,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5SEHlmzIRPnE
-								h1Zlyu2W+A==
+								TPGeujKpTzHL
+								QR5lGhvUSw==
 								</data>
 								<key>Size</key>
-								<integer>35205</integer>
+								<integer>35739</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZP2FJ/yve/bb
-								UMUDEFQ7OA==
+								v9Af7SEGojgo
+								zGOufpUslA==
 								</data>
 								<key>Size</key>
-								<integer>68310</integer>
-							</dict>
-							<key>files/stacks-image-0c90353-700x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								eYg9kPLcsi2d
-								u36RV5UmQw==
-								</data>
-								<key>Size</key>
-								<integer>72363</integer>
+								<integer>69192</integer>
 							</dict>
 							<key>files/stacks-image-127916a.png</key>
 							<dict>
@@ -230,16 +220,6 @@
 								<key>Size</key>
 								<integer>722662</integer>
 							</dict>
-							<key>files/stacks-image-5aa6b15-700x375.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								PTCRWcc73s1n
-								jGVMNVtqzg==
-								</data>
-								<key>Size</key>
-								<integer>339587</integer>
-							</dict>
 							<key>files/stacks-image-6467c3a-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -249,16 +229,6 @@
 								</data>
 								<key>Size</key>
 								<integer>29317</integer>
-							</dict>
-							<key>files/stacks-image-681c98a-700x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								WFzuxAeQXtJT
-								2StC5DbNvw==
-								</data>
-								<key>Size</key>
-								<integer>84706</integer>
 							</dict>
 							<key>files/stacks-image-68a4e7f-350x375.png</key>
 							<dict>
@@ -294,11 +264,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AQQpX6Vwp+W4
-								iqILFHYS5g==
+								J0oCqNLQIZun
+								8nxN/0xT1A==
 								</data>
 								<key>Size</key>
-								<integer>27501</integer>
+								<integer>28375</integer>
 							</dict>
 							<key>files/stacks-image-7700296-350x375.png</key>
 							<dict>
@@ -574,31 +544,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SIdtykek4G2f
-								eeSzycG1TA==
+								PXZsRywLs3Bo
+								FRLl5AYAKA==
 								</data>
 								<key>Size</key>
-								<integer>559285</integer>
+								<integer>545677</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								62eeUFDjYYQl
-								w45os8bLiQ==
+								rJhVHTVc0WqG
+								Im+A/HZ4sw==
 								</data>
 								<key>Size</key>
-								<integer>76803</integer>
+								<integer>76075</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZLhG5mo46IMm
-								4028bfsRJw==
+								WRLgFYD9UW0z
+								Y0a/O4/aeA==
 								</data>
 								<key>Size</key>
-								<integer>935100</integer>
+								<integer>926486</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
