--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-09T20:55:31Z</date>
+						<date>2019-05-10T16:05:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -544,8 +544,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PXZsRywLs3Bo
-								FRLl5AYAKA==
+								GkxxxbiUReKR
+								6iIS4FnqRw==
 								</data>
 								<key>Size</key>
 								<integer>545677</integer>
@@ -564,11 +564,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WRLgFYD9UW0z
-								Y0a/O4/aeA==
+								XDWuXgvoiPZh
+								L7waMgFflQ==
 								</data>
 								<key>Size</key>
-								<integer>926486</integer>
+								<integer>929455</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
