session chairs netsci schedule
session chairs netsci schedule

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -7014,7 +7014,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-02T20:30:55Z</date>
+						<date>2019-05-10T18:02:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7098,6 +7098,16 @@
 								</data>
 								<key>Size</key>
 								<integer>43469</integer>
+							</dict>
+							<key>files/stacks-image-0c90353-700x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								eYg9kPLcsi2d
+								u36RV5UmQw==
+								</data>
+								<key>Size</key>
+								<integer>72363</integer>
 							</dict>
 							<key>files/stacks-image-1118fd8.jpg</key>
 							<dict>
@@ -7329,6 +7339,16 @@
 								<key>Size</key>
 								<integer>722662</integer>
 							</dict>
+							<key>files/stacks-image-5aa6b15-350x375.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hwxGWMmIEhZK
+								oiA/SWlrYA==
+								</data>
+								<key>Size</key>
+								<integer>227096</integer>
+							</dict>
 							<key>files/stacks-image-6037ffd-500x500.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7358,6 +7378,16 @@
 								</data>
 								<key>Size</key>
 								<integer>29317</integer>
+							</dict>
+							<key>files/stacks-image-681c98a-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								nS9Vv5BoCXe5
+								u7veqkN0lg==
+								</data>
+								<key>Size</key>
+								<integer>50383</integer>
 							</dict>
 							<key>files/stacks-image-6c2cdff-498x498.png</key>
 							<dict>
@@ -7428,6 +7458,16 @@
 								</data>
 								<key>Size</key>
 								<integer>257542</integer>
+							</dict>
+							<key>files/stacks-image-6fb48dc-1200x488.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GuHwA2GkvWbi
+								SvmadcRb+g==
+								</data>
+								<key>Size</key>
+								<integer>107278</integer>
 							</dict>
 							<key>files/stacks-image-7322bd0-350x375.jpg</key>
 							<dict>
@@ -7578,6 +7618,16 @@
 								</data>
 								<key>Size</key>
 								<integer>66232</integer>
+							</dict>
+							<key>files/stacks-image-9416b79-350x375.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hwxGWMmIEhZK
+								oiA/SWlrYA==
+								</data>
+								<key>Size</key>
+								<integer>227096</integer>
 							</dict>
 							<key>files/stacks-image-9c884d0.jpg</key>
 							<dict>
@@ -7749,6 +7799,16 @@
 								<key>Size</key>
 								<integer>52151</integer>
 							</dict>
+							<key>files/stacks-image-bf17dfe-700x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Yy1aWDvV+utD
+								fj+8Mokh9A==
+								</data>
+								<key>Size</key>
+								<integer>90490</integer>
+							</dict>
 							<key>files/stacks-image-c132778-1200x800.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7778,6 +7838,16 @@
 								</data>
 								<key>Size</key>
 								<integer>42733</integer>
+							</dict>
+							<key>files/stacks-image-c6fac6f-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								nS9Vv5BoCXe5
+								u7veqkN0lg==
+								</data>
+								<key>Size</key>
+								<integer>50383</integer>
 							</dict>
 							<key>files/stacks-image-cd0a404.jpg</key>
 							<dict>
@@ -7923,31 +7993,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pW5PWNqq1qj4
-								6wInTMSELQ==
+								joWYrMHw8knM
+								Ibd7f0AxWQ==
 								</data>
 								<key>Size</key>
-								<integer>366705</integer>
+								<integer>386507</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								jZNXgz6PipIl
-								eASZ+y9HYA==
+								MvQ+Fn66qNW6
+								DEWwGh/T9w==
 								</data>
 								<key>Size</key>
-								<integer>32941</integer>
+								<integer>33487</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								LDVdhYhg33L4
-								RcR2G/e0Yw==
+								TlL6AAkfDXLu
+								vBRlB2ETgA==
 								</data>
 								<key>Size</key>
-								<integer>275694</integer>
+								<integer>296837</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8106,7 +8176,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-10T16:05:22Z</date>
+						<date>2019-05-10T17:58:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8180,6 +8250,16 @@
 								</data>
 								<key>Size</key>
 								<integer>69192</integer>
+							</dict>
+							<key>files/stacks-image-10d7e4a.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								p0hwe6z2OFDW
+								41UdSKLmNA==
+								</data>
+								<key>Size</key>
+								<integer>10132</integer>
 							</dict>
 							<key>files/stacks-image-127916a.png</key>
 							<dict>
@@ -8615,31 +8695,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GkxxxbiUReKR
-								6iIS4FnqRw==
+								IfIM8pHaOnXD
+								dGdSpan2hA==
 								</data>
 								<key>Size</key>
-								<integer>545677</integer>
+								<integer>551448</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								rJhVHTVc0WqG
-								Im+A/HZ4sw==
+								S1fSVnP2jqmt
+								1nT8EUChpA==
 								</data>
 								<key>Size</key>
-								<integer>76075</integer>
+								<integer>76257</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								XDWuXgvoiPZh
-								L7waMgFflQ==
+								tyepCNKNXSM/
+								/Cyjgqju3g==
 								</data>
 								<key>Size</key>
-								<integer>929455</integer>
+								<integer>937822</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14680,7 +14760,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-09T15:34:28Z</date>
+						<date>2019-05-10T18:02:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14709,11 +14789,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7lLZ6PfKx8OF
-								ocEx83puGw==
+								jy1J3RzBnIcn
+								mFgn42hh3A==
 								</data>
 								<key>Size</key>
-								<integer>5537</integer>
+								<integer>5569</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14792,7 +14872,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-10T16:05:22Z</date>
+						<date>2019-05-10T18:02:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15831,11 +15911,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nr6V+ePdMum0
-								9yLU2MvHNA==
+								Xq0oaXYda7wh
+								epyR//fbog==
 								</data>
 								<key>Size</key>
-								<integer>3785</integer>
+								<integer>4636</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15979,7 +16059,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFC7GLURxuADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFC+iFWBbyADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -15989,14 +16069,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwULsYtRH
-				y4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUL6IVYG
+				W4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBQuxi1EgG
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBQvohVgaO
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16006,7 +16086,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBQuxi1Eg4gAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBQvohVga4gAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16016,7 +16096,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBQuxi1EhigAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBQvohVgbigAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
