--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-10T16:05:22Z</date>
+						<date>2019-05-10T17:58:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -109,6 +109,16 @@
 								</data>
 								<key>Size</key>
 								<integer>69192</integer>
+							</dict>
+							<key>files/stacks-image-10d7e4a.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								p0hwe6z2OFDW
+								41UdSKLmNA==
+								</data>
+								<key>Size</key>
+								<integer>10132</integer>
 							</dict>
 							<key>files/stacks-image-127916a.png</key>
 							<dict>
@@ -544,31 +554,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GkxxxbiUReKR
-								6iIS4FnqRw==
+								IfIM8pHaOnXD
+								dGdSpan2hA==
 								</data>
 								<key>Size</key>
-								<integer>545677</integer>
+								<integer>551448</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								rJhVHTVc0WqG
-								Im+A/HZ4sw==
+								S1fSVnP2jqmt
+								1nT8EUChpA==
 								</data>
 								<key>Size</key>
-								<integer>76075</integer>
+								<integer>76257</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								XDWuXgvoiPZh
-								L7waMgFflQ==
+								tyepCNKNXSM/
+								/Cyjgqju3g==
 								</data>
 								<key>Size</key>
-								<integer>929455</integer>
+								<integer>937822</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
