schedule edit - netsci
schedule edit - netsci

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-14T17:51:15Z</date>
+						<date>2019-05-15T18:18:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,21 +94,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-10d7e4a.jpg</key>
 							<dict>
@@ -274,11 +274,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								J0oCqNLQIZun
-								8nxN/0xT1A==
+								AQQpX6Vwp+W4
+								iqILFHYS5g==
 								</data>
 								<key>Size</key>
-								<integer>28375</integer>
+								<integer>27501</integer>
 							</dict>
 							<key>files/stacks-image-7700296-350x375.png</key>
 							<dict>
@@ -554,8 +554,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IfIM8pHaOnXD
-								dGdSpan2hA==
+								cCgQ/eTPxIDN
+								YgBfYZMn4Q==
 								</data>
 								<key>Size</key>
 								<integer>551448</integer>
@@ -564,8 +564,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								S1fSVnP2jqmt
-								1nT8EUChpA==
+								AhHUygal6yaZ
+								6ES0KTDTaA==
 								</data>
 								<key>Size</key>
 								<integer>76257</integer>
@@ -574,11 +574,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0p6EaEPPNM8A
-								MTeHsVthxg==
+								w65/Ow1BY7J0
+								IyN53R96bA==
 								</data>
 								<key>Size</key>
-								<integer>936161</integer>
+								<integer>939110</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
